<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ru.divizdev.creditcalculator.MainActivity"
        android:orientation="vertical">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/text_amount_credit" android:textSize="@dimen/text_title_size" android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:inputType="numberDecimal" android:id="@+id/edit_text_amount_credit"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/text_percent" android:id="@+id/textView" android:textSize="@dimen/text_title_size"
              android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:inputType="numberDecimal" android:id="@+id/edit_text_percent"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/text_period" android:paddingTop="@dimen/activity_horizontal_margin"
              android:textSize="@dimen/text_title_size" android:textStyle="bold"/>

    <LinearLayout android:padding="@dimen/activity_horizontal_margin" android:orientation="horizontal"
                  android:layout_width="match_parent" android:layout_height="wrap_content" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:gravity="center_horizontal"
                  android:text="@string/text_period_year"
                  android:layout_weight="1"/>

        <NumberPicker android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                        android:id="@+id/np_year"/>

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1" android:layout_gravity="center_vertical"
                  android:text="@string/text_period_month"
                  android:gravity="center_horizontal"/>

        <NumberPicker android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/np_month" />


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>

    </LinearLayout>


    <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/spinner" android:gravity="start"
            android:layout_weight="1"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_calc"
            android:text="@string/text_calc"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
